<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:alpha="0.7"
    tools:context=".LoginActivity">

    <EditText
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtLogUname"
        android:background="@drawable/input_bg"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTravelTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.209"/>

    <TextView
        android:id="@+id/txtPassDetails"
        android:layout_width="254dp"
        android:layout_height="56dp"
        android:text="GoFLY"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/txtTravelTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassDetails"
        app:layout_constraintVertical_bias="0.167" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtLogPass"
        android:background="@drawable/input_bg"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogUname"
        android:layout_marginTop="32dp"
        app:layout_constraintHorizontal_bias="0.495"/>
    <Button
        android:text="@string/login"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:id="@+id/btnLogin"
        android:background="@drawable/btn_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogPass"
        android:layout_marginTop="56dp"
        app:layout_constraintHorizontal_bias="0.496"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="189dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:text="@string/register_for_new_user"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>

