<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/lightGrey"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_bg_bottom_corner">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/world_half" />

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Ticket Details"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                    app:layout_constraintStart_toEndOf="@+id/backBtn"
                    app:layout_constraintTop_toTopOf="@+id/backBtn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayoutTicket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:background="@drawable/white_bg"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/airlineLogo"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:id="@+id/arriveTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="time"
                        android:textColor="@color/blue"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/airlineLogo"
                        app:layout_constraintStart_toStartOf="@+id/airlineLogo"
                        app:layout_constraintTop_toBottomOf="@+id/airlineLogo" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="172dp"
                        android:layout_height="19dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/arriveTxt"
                        app:srcCompat="@drawable/straight_line_flight" />

                    <TextView
                        android:id="@+id/fromTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toTopOf="@+id/txtDepTime"
                        app:layout_constraintEnd_toStartOf="@+id/imageView10"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/arriveTxt" />

                    <TextView
                        android:id="@+id/txtDepTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="09:00"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                        app:layout_constraintEnd_toEndOf="@+id/fromTxt"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/fromTxt"
                        app:layout_constraintTop_toBottomOf="@+id/fromTxt" />

                    <TextView
                        android:id="@+id/toTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toTopOf="@+id/txtFlightAmmount"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView10"
                        app:layout_constraintTop_toBottomOf="@+id/arriveTxt" />

                    <TextView
                        android:id="@+id/txtFlightAmmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toShort"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                        app:layout_constraintEnd_toEndOf="@+id/toTxt"
                        app:layout_constraintStart_toStartOf="@+id/toTxt"
                        app:layout_constraintTop_toBottomOf="@+id/toTxt"
                        tools:text="$500" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtIDPC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ID Number:"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txtFNAMEPC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="First Name:"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtGenderPl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Gender:"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txtMobilePL"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mobile No:"
                            android:textColor="@color/black"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtIDNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="To"
                            android:textColor="@color/black"
                            tools:text="39917502" />

                        <TextView
                            android:id="@+id/txtFNAME"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Lucy"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Female"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txtMobileNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0145678793"
                            android:textColor="@color/black"
                            android:textStyle="bold" />


                    </LinearLayout>
                </LinearLayout>


                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/dash_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtFlightClassPL"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Flight Class:"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Flight Date:"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txtSeatsPl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Seats:"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/seatsTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtFlightClass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Business"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txtFlightDateTk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="24 Nov,2024"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtSeats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="D1"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/priceTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/qrcode" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/dash_line" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    app:srcCompat="@drawable/barcode" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/blue_bg"
                android:textColor="@color/white"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Download Ticket"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>